--- a/nutrak/nutrak/Localizable.xcstrings
+++ b/nutrak/nutrak/Localizable.xcstrings
@@ -7,6 +7,9 @@
     "%" : {
 
     },
+    "%lld" : {
+
+    },
     "%lld%%" : {
 
     },
@@ -42,17 +45,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Carbs"
-          }
-        }
-      }
-    },
-    "emptyTitle" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : " "
           }
         }
       }
@@ -103,6 +95,9 @@
           }
         }
       }
+    },
+    "MilestonesView Placeholder" : {
+
     },
     "moreInsights" : {
       "extractionState" : "manual",
@@ -206,8 +201,61 @@
         }
       }
     },
-    "StreakScreen" : {
-
+    "streakBold" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "variations" : {
+            "plural" : {
+              "one" : {
+                "stringUnit" : {
+                  "state" : "translated",
+                  "value" : "%d day Streak!"
+                }
+              },
+              "other" : {
+                "stringUnit" : {
+                  "state" : "translated",
+                  "value" : "%d days Streak!"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "streakPrefix" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "You're on a"
+          }
+        }
+      }
+    },
+    "streakSuffix" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Keep it up!"
+          }
+        }
+      }
+    },
+    "streakTitle" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Streaks"
+          }
+        }
+      }
     },
     "totalGrams" : {
       "extractionState" : "manual",
